# competitive-programming-open

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  fonttest.txt  mise.toml  pyproject.toml  skills-lock.json  start.cpp  start.py
ABC/229-V/: A.py  B.py  B_2.py
ABC/461/: B.py  C.py  in_C
ABC/462/: A.py
ABC/463/: A.py  B.py
ABC/464/: A.py  B.py
ABC/abc161/: A.py  B.py  C.py  C2.py
ABC/abc465/: B.py  B2.py  B3.py
ABC/abc466/: A.py  B.py  C.py
ABC/abc467/: A.py  B.py
ABS/: 81A.py  81B.py  86A.py  PracticeA.py
AHC/065-Virtual/: main.py  output.txt  task.md
AHC/066/: algo.py  algo2.cpp  algo2.py  algo3.py  algo4.cpp  algo5.py  algo6.py  analyze_dist.py  compare_solvers.py  gen_base_actions.py  input.txt  macro_optimizer.py  main.cpp  main.py  main2.py  main_optuna.cpp  memo.md  op_algo.py  output.txt  output_sample.txt  task.md  tune_macro_len.py  tune_op_algo.py  tune_parameters.py
AHC/066/in/: 0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  0010.txt  0011.txt  0012.txt  0013.txt  0014.txt  0015.txt  0016.txt  0017.txt  0018.txt  0019.txt  (+480 more)
AHC/067/: 1.py  OK_latest.cpp  OK_latest.py  OKcopy.py  main.py  main2.cpp  main2copy.py  out.txt  task.md
AHC/067-end/: NOOK.py  OK_latest.cpp  out.txt
AHC/ahc068/: main.cpp  pahcer_config.toml.bak
apg4b-python/: ex1.py  ex10.py  ex3.py  ex6.py  ex8.py  ex9.py  ref_ex9.py
devtools/: README.md
devtools/pahcer-studio/: README.md
docs/: README.md
others/第5回湖風祭コンテスト/: 1.bf
src/atro/: cli.py  core.py  pahcer.py  symlink.py  util.py
(+36 files in other folders)
